# squid

./: .gitignore  CMakeLists.txt  README.md  dist.sh
cmake/: backends.cmake  gtest.cmake  options.cmake  paths.cmake  project-config.cmake.in  vars.cmake  version.cmake
cmake/backends/: MySQL.cmake  PostgreSQL.cmake  SQLite3.cmake
cpack/: CMakeLists.txt
demo/: CMakeLists.txt
demo/demo_common/: CMakeLists.txt  demo_common.cpp  demo_common.h
demo/demo_mysql/: CMakeLists.txt  demo_mysql.cpp  docker-compose.yml
demo/demo_postgresql/: CMakeLists.txt  demo_postgresql.cpp  docker-compose.yml
demo/demo_sqlite3/: CMakeLists.txt  demo_sqlite3.cpp
install/: CMakeLists.txt
squid/: .clang-format  CMakeLists.txt  api.h  basicstatement.cpp  basicstatement.h  byte_string.h  config.h.in  connection.cpp  connection.h  connectionpool.cpp  connectionpool.h  error.cpp  error.h  ibackendconnection.cpp  ibackendconnection.h  ibackendconnectionfactory.cpp  ibackendconnectionfactory.h  ibackendstatement.cpp  ibackendstatement.h  main.cpp  parameter.cpp  parameter.h  preparedstatement.cpp  preparedstatement.h  result.cpp  result.h  statement.cpp  statement.h  transaction.cpp  transaction.h  types.h  version.cpp  version.h  version.h.in
squid/detail/: always_false.h  bind_iarchive.h  bind_oarchive.h  conversions.cpp  conversions.h  demangle.cpp  demangle.h  demangled_type_name.h  is_optional.h  is_scoped_enum.h  parameterbinder.h  resultbinder.h  type_traits.h
squid/mysql/: CMakeLists.txt  backendconnection.cpp  backendconnection.h  backendconnectionfactory.cpp  backendconnectionfactory.h  connection.cpp  connection.h  error.cpp  error.h  statement.cpp  statement.h
squid/mysql/detail/: conversions.cpp  conversions.h  mysqlfwd.h  query.cpp  query.h  queryparameters.cpp  queryparameters.h  queryresults.cpp  queryresults.h
squid/mysql/test/unit/: test_conversions.cpp  test_query.cpp  test_queryparameters.cpp
squid/postgresql/: CMakeLists.txt  backendconnection.cpp  backendconnection.h  backendconnectionfactory.cpp  backendconnectionfactory.h  basicpostgresqlstatement.cpp  basicpostgresqlstatement.h  basicstatement.cpp  basicstatement.h  connection.cpp  connection.h  error.cpp  error.h  notify_listener.cpp  notify_listener.hpp  notify_listener.ipp  postgresqlbackendconnection.cpp  postgresqlbackendconnection.h  postgresqlbackendconnectionfactory.cpp  postgresqlbackendconnectionfactory.h  postgresqlconnection.cpp  postgresqlconnection.h  postgresqlerror.cpp  postgresqlerror.h  postgresqlpreparedstatement.cpp  postgresqlpreparedstatement.h  postgresqlstatement.cpp  postgresqlstatement.h  preparedstatement.cpp  preparedstatement.h  statement.cpp  statement.h
squid/postgresql/detail/: connectionchecker.cpp  connectionchecker.h  conversions.cpp  conversions.h  execresult.h  libpqfwd.h  pgconversions.cpp  pgconversions.h  postgresqlconnectionchecker.cpp  postgresqlconnectionchecker.h  postgresqlquery.cpp  postgresqlquery.h  postgresqlqueryparameters.cpp  postgresqlqueryparameters.h  postgresqlqueryresults.cpp  postgresqlqueryresults.h  query.cpp  query.h  queryparameters.cpp  queryparameters.h  queryresults.cpp  queryresults.h
squid/postgresql/test/unit/: test_conversions.cpp  test_query.cpp  test_queryparameters.cpp
squid/sqlite3/: CMakeLists.txt  backendconnection.cpp  backendconnection.h  backendconnectionfactory.cpp  backendconnectionfactory.h  connection.cpp  connection.h  error.cpp  error.h  statement.cpp  statement.h
squid/sqlite3/detail/: isqliteapi.cpp  isqliteapi.h  queryparameters.cpp  queryparameters.h  queryresults.cpp  queryresults.h  sqlite3fwd.h  sqliteapi.cpp  sqliteapi.h  sqliteapimock.cpp  sqliteapimock.h
squid/sqlite3/detail/test/unit/: test_queryparameters.cpp  test_queryresults.cpp
squid/sqlite3/test/unit/: test_backendconnection.cpp  test_backendconnectionfactory.cpp  test_connection.cpp  test_error.cpp
squid/test/unit/: test_conversions.cpp  test_parameter.cpp  test_result.cpp
